<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, GeoPing!</string>
    
    <string name="add_track_person">Ajouter une personne</string>
    <string name="add_pairing">Authoriser un GeoPing</string>
    
    <string name="geoping">Geo Ping</string>
    <string name="menu_select_contact">Contacts</string>
    <string name="menu_save">Sauver</string>
    <string name="menu_delete">Supprimer</string>
    <string name="menu_cancel">Annuler</string>
    <string name="cancel_button">Annuler</string>
    
     
    <!-- Encryption -->
    <string name="no_geoping_description">Please install \'GeoPing\' from the Market (https://play.google.com/store/apps/details?id=eu.ttbox.geoping)</string>
    <string name="geoping_encrypted_message">GeoPing encrypted message</string>

    <!-- GeoTrack Notification -->
    <string name="notif_geoping">GeoPing</string>
    <string name="notif_geoping_response">GeoPing réponse</string>
    <string name="notif_geoping_request">GeoPing demandé</string>
    <string name="notif_geoping_request_blocked">GeoPing Bloqué</string> 
    <string name="notif_pairing">GeoPing Appariement</string>
    <string name="notif_pairing_always">Toujours</string>
    <string name="notif_pairing_never">Bloquer</string>
    <string name="notif_confirm_yes">Oui</string>
    <string name="notif_confirm_no">Non</string>
    <string name="notif_confirm_request_eachtime">Ask</string>
    
    <string name="toast_notif_sended_geoping_request">GeoPing demandé : %s</string>
    <string name="toast_notif_sended_geoping_response">GeoPing envoyé : %s</string>
    <string name="toast_notif_backup_restored">Sauvegarde restauré</string>
    
   
    <!-- Sms Action -->
    <string name="sms_action_geoping_request">GeoPing requête</string>
    <string name="sms_action_geoping_response">GeoPing réponse</string>
    <string name="sms_action_pairing_request">Appariement requête</string>
    <string name="sms_action_pairing_response">Appariement réponse</string>
    

    <!-- Menu -->
    <string name="menu_map_mypositioncenter">Ma position</string>
    <string name="map_mode">Type de Carte</string>
    <string name="menu.geoTracker">Geo Tacker</string>
    <string name="menu_geoping">GeoPing</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_map">Map</string>
    <string name="menu_quit">Quit</string>
    <string name="menu_person">Personnes</string>
    <string name="menu_pairing">Appariement</string>
    <string name="menu_smslog">Log Sms</string>
    
    <!-- Prefs -->
    <string name="prefs_sms_category">Monitoring Sms</string>
    <string name="prefs_sms_delete_onMessage">Suppression des SMS</string>
    <string name="prefs_sms_delete_onMessage_summaryOn">SMS GeoPing sont invisible</string>
    <string name="prefs_sms_delete_onMessage_summaryOff">SMS Geoping ne sont pas effacé</string>
    
    <string name="prefs_geoping_request">Requêtes GeoPing</string>
    <string name="prefs_show_geoping_notification">Afficher une notification</string>
    <string name="prefs_show_geoping_notification_summary">Pour les nouveaux appariements</string> 
    <string name="prefs_geoping_localSave">Sauvegardé en base local</string>
    <string name="prefs_geoping_localSave_summaryOn">Garde une trace en DB Local</string>
    <string name="prefs_geoping_localSave_summaryOff">Désactivé</string>

    <string name="prefs_myLocation">Ma Position</string>
    <string name="prefs_myLocation_display_LatLng">Afficher les coord. WSG84</string>

    <string name="prefs_geoping_geoPoint_category">GeoPoint</string>
    <string name="prefs_geoPoint_geocoding_auto">Geocoding automatique</string>
    
    <string name="prefs_info">Information</string>
    <string name="prefs_version">Version</string>
    <string name="prefs_help">Aide</string>
    <string name="prefs_licence">Licence</string>
    <string name="prefs_about">Crédit</string>
    <string name="prefs_relasenotes">Quoi de neuf ?</string> 
    <string name="prefs_count_laught">Nombre de lancement</string>
    <string name="prefs_count_laught_summary">Nombre d\'utilisation de l\'application</string>
    
    <!-- Map -->
    <string name="ask_activate_gps">Voulez-vous activer le GPS ?</string>
    
    <!-- Dialog -->
    <string name="color_picker">Sélectionner une couleur</string>
 
    <!-- GeoTrack -->
    <string name="geotrack_time_dateformat">%1$tY-%1$tm-%1$td %1$tH:%1$tM:%1$tS</string>
   
    
    <!-- Person model -->
    <string name="person_name">Nom</string>
    <string name="person_phone">N° Téléphone</string>

    <!-- Pairing model -->
    <string name="pairing_name">Nom</string>
    <string name="pairing_phone">N° Téléphone</string>
    <string name="pairing_show_notification">Afficher une notification</string>
    <string name="pairing_authorize_type">Authorisation</string>
    <string name="pairing_authorize_type:never">Jamais</string>
    <string name="pairing_authorize_type:ask">Sur validation</string>
    <string name="pairing_authorize_type:always">Toujours</string>
    
    <!-- SmsLog Model -->
	<string name="smslog_delete_all">Tous Suppr.</string>

    <!-- Help -->
    <string name="person_help">Liste des personnes auquelles vous pouvez demander un GeoPing.\n\nLa fonction d\'appariement permet de demander à l\'application Geoping distante quels seront vos droits de demande de GeoPing</string>
    <string name="pairing_help">Liste des personnes auquelles vous accepter (ou pas) d\'envoyer votre GeoPing (Votre position géographique obtenu grace aux GPS de votre Android)</string>
    <string name="smslog_help">Liste des messages Envoyé ou recu par cette application</string>
    
</resources>