<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menuMap"
        android:icon="@android:drawable/ic_dialog_map"
        android:showAsAction="ifRoom"
        android:title="@string/menu_map"/>
    <item
        android:id="@+id/menu_track_person"
        android:icon="@drawable/ic_action_user"
        android:showAsAction="ifRoom"
        android:title="@string/menu_person"/>
    <item
        android:id="@+id/menu_pairing"
        android:icon="@drawable/ic_device_access_secure"
        android:showAsAction="ifRoom"
        android:title="@string/menu_pairing"/>
    <item
        android:id="@+id/menu_smslog"
        android:icon="@drawable/ic_device_access_secure"
        android:showAsAction="ifRoom"
        android:title="@string/menu_smslog"/>
    <item
        android:id="@+id/menuGeotracker"
        android:icon="@drawable/map"
        android:showAsAction="ifRoom"
        android:title="@string/menu.geoTracker"/>
    <item
        android:id="@+id/option"
        android:icon="@android:drawable/ic_menu_mapmode"
        android:showAsAction="never"
        android:title="@string/menu_options"/>
     <item
        android:id="@+id/menuQuitter"
        android:icon="@android:drawable/ic_lock_power_off"
        android:showAsAction="never"
        android:title="@string/menu_quit"/>

</menu>