<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

      <item
        android:id="@+id/menu_cancel"
        android:icon="@drawable/ic_menu_nav_cancel"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_save"/>
    <item
        android:id="@+id/menu_save"
        android:icon="@drawable/ic_menu_nav_accept"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_save"/>
    <item
        android:id="@+id/menu_select_contact"
        android:icon="@android:drawable/ic_delete"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_select_contact"/>
    <item
        android:id="@+id/menu_delete"
        android:icon="@android:drawable/ic_menu_delete"
        android:showAsAction="ifRoom|withText"
        android:title="@string/menu_delete"/>

</menu>